--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>SkyGaze</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="wrapper">
+        <nav>
+            <div class="nav-wrapper #7c4dff deep-purple accent-2">
+                <a href="#!" class="brand-logo"><h1>SkyGaze</h1></a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a class="waves-effect waves-dark btn #1a237e indigo darken-4">Planets<i class="material-icons right">brightness_5</i></a></li>
+                    <li><a class="waves-effect waves-dark btn #1a237e indigo darken-4">Stars<i class="material-icons right">star</i></a></li>
+                    <li><a class="waves-effect waves-dark btn #1a237e indigo darken-4">Constellations<i class="material-icons right">stars</i></a></li>
+                    <li><a class="waves-effect waves-dark btn #1a237e indigo darken-4">Astronomic Events<i class="material-icons right">blur_on</i></a></li>
+                    <li><a class="waves-effect waves-dark btn #1a237e indigo darken-4">How To/About Us<i class="material-icons right">account_box</i></a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+
+
+
+    <script src="script.js"></script>
 </body>
+
 </html>
