--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SkyGaze</title>
+    <title>kitchenCounter</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -15,14 +15,10 @@
 <body>
     <div class="wrapper">
         <nav>
-            <div class="nav-wrapper #7c4dff deep-purple accent-2">
-                <a href="#!" class="brand-logo"><h1>SkyGaze</h1></a>
+            <div class="nav-wrapper #81d4fa light-blue lighten-3">
+                <a href="#!" class="brand-logo"><img id="logo" src="Assets/kitchen-counter.svg" alt="Background Image"></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a class="waves-effect waves-dark btn #1a237e indigo darken-4">Planets<i class="material-icons right">brightness_5</i></a></li>
-                    <li><a class="waves-effect waves-dark btn #1a237e indigo darken-4">Stars<i class="material-icons right">star</i></a></li>
-                    <li><a class="waves-effect waves-dark btn #1a237e indigo darken-4">Constellations<i class="material-icons right">stars</i></a></li>
-                    <li><a class="waves-effect waves-dark btn #1a237e indigo darken-4">Astronomic Events<i class="material-icons right">blur_on</i></a></li>
-                    <li><a class="waves-effect waves-dark btn #1a237e indigo darken-4">How To/About Us<i class="material-icons right">account_box</i></a></li>
+                    <li><a id="currentLocation"class="waves-effect waves-dark btn #e3f2fd blue lighten-5">Find Restaurants Near You!<i class="material-icons right">my_location</i></a></li>
                 </ul>
             </div>
         </nav>
