--- a/index.html
+++ b/index.html
@@ -10,23 +10,42 @@
     <link href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
 </head>
 
 <body>
     <div class="wrapper">
         <nav>
-            <div class="nav-wrapper #81d4fa light-blue lighten-3">
-                <a href="#!" class="brand-logo"><img id="logo" src="Assets/kitchen-counter.svg" alt="Background Image"></a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a id="currentLocation"class="waves-effect waves-dark btn #e3f2fd blue lighten-5">Find Restaurants Near You!<i class="material-icons right">my_location</i></a></li>
+            <div id="navBar" class="nav-wrapper #f9fbe7 lime lighten-5">
+                <a href="#!" class="brand-logo"><img id="logo" src="Assets/calorie-companion.svg"
+                        alt="Background Image"></a>
+                <ul class="right">
+                    <li><a id="currentLocationbtn" class="waves-effect waves-dark btn #afb42b lime darken-2">Find
+                            Restaurants Near You!<i class="material-icons right">my_location</i></a></li>
+                    <li><a id="currentLocationbtnMobile" class="waves-effect waves-dark btn #afb42b lime darken-2"><i
+                                class="material-icons">my_location</i></a></li>
                 </ul>
             </div>
         </nav>
-    </div>
+        <div id="mobile">
+            <div id="results" class="row">
+
+            </div>
+        </div>
+
+        <div id="desktop" class="carousel carousel-slider">
 
 
+        </div>
 
-    <script src="script.js"></script>
+
+        <script src="script.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/ip-geolocation-api-jquery-sdk@1.0.5/ipgeolocation.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 
 </html>
