adding most up to date files

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>kitchenCounter</title>
+    <title>Calorie Companion</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Francois+One|Pragati+Narrow&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -23,9 +23,9 @@
                 <a href="#!" class="brand-logo"><img id="logo" src="Assets/calorie-companion.svg"
                         alt="Background Image"></a>
                 <ul class="right">
-                    <li><a id="currentLocationbtn" class="waves-effect waves-dark btn #afb42b lime darken-2">Find
+                    <li><a id="currentLocationbtn" class="waves-effect waves-dark btn #cddc39 lime">Find
                             Restaurants Near You!<i class="material-icons right">my_location</i></a></li>
-                    <li><a id="currentLocationbtnMobile" class="waves-effect waves-dark btn #afb42b lime darken-2"><i
+                    <li><a id="currentLocationbtnMobile" class="waves-effect waves-dark btn #cddc39 lime"><i
                                 class="material-icons">my_location</i></a></li>
                 </ul>
             </div>
@@ -36,10 +36,8 @@
             </div>
         </div>
 
-        <div id="desktop" class="carousel carousel-slider">
-
-
-        </div>
+        <div id="desktop" class="carousel carousel-slider" style="text-align:center">
+            </div>
 
 
         <script src="script.js"></script>
