added homepage logo

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                 </ul>
             </div>
         </nav>
+
+        <img id="homepageLogo" src="assets/calorie-companion2.svg" alt="App Logo">
     
         <!--MODAL FOR CALORIE COUNTER-->
         <!-- Modal Trigger -->
